--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":">=16.20.1"
+  },
   "dependencies": {
     "@material/card": "^14.0.0",
     "@material/layout-grid": "^14.0.0",
