--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "engines": {
     "node": ">=16.20.1"
   },
+  "scripts": {
+    "test": "jest --watch-all ",
+    "dev": "nodemon ./server/server.ts"
+  },
   "dependencies": {
     "@material/card": "^14.0.0",
     "@material/layout-grid": "^14.0.0",
+    "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.9.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
